@@ -22,7 +22,7 @@ package org.onap.aai.modelloader.config;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Properties;
 
 import org.onap.aai.cl.api.Logger;
@@ -48,7 +48,7 @@ public class BeanConfig {
     public Properties configProperties() throws IOException {
         // Load model loader system configuration
         logger.info(ModelLoaderMsgs.LOADING_CONFIGURATION);
-        InputStream configInputStream = Files.newInputStream(Paths.get(configDir, "model-loader.properties"));
+        InputStream configInputStream = Files.newInputStream(Path.of(configDir, "model-loader.properties"));
         Properties configProperties = new Properties();
         configProperties.load(configInputStream);
         return configProperties;
