@@ -29,7 +29,7 @@ import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
@@ -62,7 +62,7 @@ public class DistributionClientTestConfiguration {
   @Bean(name = "testProperties")
   Properties configProperties() throws IOException {
     // Load model loader system configuration
-    InputStream configInputStream = Files.newInputStream(Paths.get(configDir, "model-loader.properties"));
+    InputStream configInputStream = Files.newInputStream(Path.of(configDir, "model-loader.properties"));
     Properties configProperties = new Properties();
     configProperties.load(configInputStream);
 
